--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -82,7 +82,7 @@ table {
   border-spacing: 0;
 }
 
-a:link, .clickable {
+a:link, a:visited, .clickable {
   cursor: pointer;
   color: inherit;
   text-decoration: none;
@@ -225,6 +225,51 @@ p code {
   padding: 30px 0;
 }
 
+.header {
+  align-items: center;
+  border-bottom: 1px solid var(--jet);
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 10px;
+}
+
+.logo {
+  display: flex;
+}
+
+.firstname .rest {
+  margin-right: 10px;
+}
+
+.extended {
+  display: none;
+}
+
+.firstname .first-letter {
+  color: var(--ruby);
+  font-weight: bold;
+}
+
+.firstname .rest {
+  display: none;
+}
+
+.lastname {
+  color: var(--ruby);
+}
+
+.lastname:first-letter {
+  font-weight: bold;
+}
+
+.menu {
+  display: flex;
+}
+
+.menu li + li {
+  margin-left: 20px;
+}
+
 @media only screen and (orientation : landscape) {
   code, .code, .codehilite {
     font-size: 0.6rem;
@@ -241,14 +286,10 @@ p code {
   .h2 {font-size: 2.5rem;}
   .h3 {font-size: 2rem;}
   .h4 {font-size: 1.5rem;}
-
-  code, .code, .codehilite {
-    font-size: 0.7rem;
-  }
-
-  .content {
-    padding: 50px 40px;
-  }
+  code, .code, .codehilite {font-size: 0.7rem;}
+  .content {padding: 50px 40px;}
+  .logo {font-size: 1.25rem;}
+  .firstname .rest {display: inline;}
 }
 
 @media only screen and (min-width: 1024px) {
