--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -76,7 +76,7 @@ ol {
 }
 
 li {
-  margin-left: 16px;
+  margin-left: 1rem;
 }
 
 dd {
@@ -97,6 +97,55 @@ a:link, a:visited, .clickable {
 
 a:hover, .clickable:hover {
   text-decoration: underline;
+}
+
+.bq {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.bq-quote {
+  font-family: "Source Serif Pro", serif;
+  font-size: 1.15rem;
+  line-height: 1.5;
+  border: solid 2px var(--ruby);
+  border-radius:20px;
+  padding: 25px;
+  position: relative;
+}
+
+.bq-source ~ .bq-quote:after {
+  content:"";
+  position: absolute;
+  border: 2px solid var(--ruby);
+  border-radius: 0 50px 0 0;
+  width: 60px;
+  height: 60px;
+  bottom: -60px;
+  left: 50px;
+  border-bottom: none;
+  border-left: none;
+  z-index: 3;
+}
+
+.bq-source ~ .bq-quote:before {
+  background: var(--section-bg);
+  content:"";
+  position: absolute;
+  width: 80px;
+  height: 2px;
+  bottom: -2px;
+  left: 50px;
+  z-index: 2;
+}
+
+.dark-theme1 .bq-source ~ .bq-quote:before {
+  background: var(--smoky);
+}
+
+.bq-source {
+  margin: 20px 0 10px 130px;
+  padding: 20px 0;
 }
 
 .h1, .h2, .h3, .h4 {
@@ -121,10 +170,6 @@ a:hover, .clickable:hover {
 
 .h4 {
   font-size: 1.4rem;
-}
-
-.codehilite {
-  margin: 30px 0;
 }
 
 .codehilite code {
@@ -215,18 +260,6 @@ p code {
   padding: 20px;
 }
 
-.content .h1 {
-  margin-bottom: 50px;
-}
-
-.content .h2 {
-  margin-bottom: 30px;
-}
-
-.content p + p {
-  margin-top: 28px;
-}
-
 .centered {
   padding: 30px 0;
 }
@@ -280,6 +313,43 @@ p code {
 .menu {display: flex;}
 .menu li + li {margin-left: 10px;}
 
+.text-content .h1 {
+  margin: 0 0 50px;
+}
+
+.text-content .h2 {
+  margin: 50px 0 30px;
+}
+
+.text-content .h3,
+.text-content .h4,
+.text-content .h5,
+.text-content ol,
+.text-content ul,
+.text-content p,
+.text-content dl,
+.text-content table,
+.text-content .codehilite {
+  margin-top: 28px;
+  margin-bottom: 28px;
+}
+
+.text-content .h2:first-child,
+.text-content .h3:first-child,
+.text-content .h4:first-child,
+.text-content .h5:first-child,
+body .text-content :first-child {
+  margin-top: 0;
+}
+
+.text-content .h2:last-child,
+.text-content .h3:last-child,
+.text-content .h4:last-child,
+.text-content .h5:last-child,
+body .text-content :last-child {
+  margin-bottom: 0;
+}
+
 @media only screen and (orientation : landscape) {
   code, .code, .codehilite {
     font-size: 0.6rem;
@@ -314,6 +384,7 @@ p code {
   .header .menu {margin: 0; font-size: 1rem;}
   .logo-firstname:first-letter {color: var(--ruby);}
   .logo-lastname {color: var(--ruby);}
+  .bq-quote {padding: 50px;}
 }
 
 @media only screen and (min-width: 1024px) {
