--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -173,6 +173,101 @@ a:hover, .clickable:hover {
   font-size: 1.4rem;
 }
 
+p code {
+  background: var(--code-bg);
+  padding: 2px 3px;
+}
+
+.hide-mobile {display: none;}
+
+.subtle {
+  color: var(--manatee);
+  font-weight: normal;
+}
+
+.img {
+  display: inline-block;
+  max-width: 100%;
+}
+
+/* Tables */
+
+.table th {
+  text-align: left;
+  font-weight: strong;
+}
+
+.table td,
+.table th {
+  padding: 5px 10px;
+}
+
+.table strong {
+  font-weight: normal;
+  color: var(--fulvors);
+}
+
+/* Logo and header */
+
+.header {
+  background: var(--header-bg);
+  color: var(--header-fg);
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px 10px;
+  margin-top: 30px;
+}
+
+.logo {
+  display: flex;
+  align-items: flex-start;
+  font-size: 1.25rem;
+}
+
+.facebox {
+  background: var(--jet);
+  border-radius: 50%;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  position: relative;
+  margin-right: 20px;
+  margin-top: -15px;
+}
+
+.facebox .img {
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  display: block;
+  width: 100px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.logo-name {padding-top: 7px;}
+.logo-firstname, .logo-lastname {display: inline-block;}
+.logo-firstname:first-letter {font-weight: bold;}
+.logo-lastname {margin-left: 5px;}
+.logo-lastname:first-letter {font-weight: bold;}
+.header .menu {margin-left: 120px; margin-top: -43px; font-size: 0.9rem;}
+.menu {display: flex;}
+.menu li + li {margin-left: 10px;}
+
+/* Byline */
+.byline .date {
+  margin-right: 10px;
+}
+
+.byline {
+  border-bottom: 1px solid var(--athens);
+  color: var(--manatee);
+  font-size: 0.9rem;
+  padding: 10px 0 20px;
+}
+
+/* Syntax highlighting */
+
 .codehilite code {
   background: var(--code-bg);
   display: block;
@@ -183,11 +278,6 @@ a:hover, .clickable:hover {
 code, .code, .codehilite {
   font-family: "Source Code Pro", monospace;
   font-size: 0.7rem;
-}
-
-p code {
-  background: var(--code-bg);
-  padding: 2px 3px;
 }
 
 .codehilite .hll { background-color: #ffffcc }
@@ -250,6 +340,8 @@ p code {
 .codehilite .il { color: var(--lima); font-weight: bold; } /* Literal.Number.Integer.Long */
 .codehilite .nx {font-weight: bold;}
 
+/* Sections */
+
 .section {
   background: var(--section-bg);
   color: var(--section-fg);
@@ -261,65 +353,12 @@ p code {
   padding: 20px;
 }
 
-.centered {
-  padding: 30px 0;
-}
-
-.hide-mobile {display: none;}
-
-/* Logo and header */
-
-.header {
-  background: var(--header-bg);
-  color: var(--header-fg);
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 10px 10px;
-  margin-top: 30px;
-}
-
-.logo {
-  display: flex;
-  align-items: flex-start;
-  font-size: 1.25rem;
-}
-
-.facebox {
-  background: var(--jet);
-  border-radius: 50%;
-  display: inline-block;
-  width: 100px;
-  height: 100px;
-  position: relative;
-  margin-right: 20px;
-  margin-top: -15px;
-}
-
-.facebox .img {
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  display: block;
-  width: 100px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-}
-
-.logo-name {padding-top: 7px;}
-.logo-firstname, .logo-lastname {display: inline-block;}
-.logo-firstname:first-letter {font-weight: bold;}
-.logo-lastname {margin-left: 5px;}
-.logo-lastname:first-letter {font-weight: bold;}
-.header .menu {margin-left: 120px; margin-top: -43px; font-size: 0.9rem;}
-.menu {display: flex;}
-.menu li + li {margin-left: 10px;}
-
 .text-content .h1 {
-  margin: 0 0 50px;
+  margin: 0 0 2.4rem;
 }
 
 .text-content .h2 {
-  margin: 50px 0 30px;
+  margin: 2.4rem 0 1.5rem;
 }
 
 .text-content .h3,
@@ -331,8 +370,8 @@ p code {
 .text-content dl,
 .text-content table,
 .text-content .codehilite {
-  margin-top: 28px;
-  margin-bottom: 28px;
+  margin-top: 1.33rem;
+  margin-bottom: 1.33rem;
 }
 
 .text-content .h2:first-child,
@@ -351,27 +390,25 @@ body .text-content :last-child {
   margin-bottom: 0;
 }
 
-.subtle {
-  color: var(--manatee);
+/* Centered section */
+
+.centered {
+  padding: 1.5rem 0;
 }
 
-/* Tables */
-table {
+/* Media left/above */
+.media-front .media {
+  margin-bottom: 2.4rem;
 }
 
-.table th {
-  text-align: left;
-  font-weight: normal;
+/* Media right/below */
+.media-back .content {
+  display: flex;
+  flex-direction: column-reverse;
 }
 
-.table td,
-.table th {
-  padding: 5px 10px;
-}
-
-.table strong {
-  font-weight: normal;
-  color: var(--fulvors);
+.media-back .media {
+  margin-top: 2.4rem;
 }
 
 @media only screen and (orientation : landscape) {
@@ -409,23 +446,25 @@ table {
   .logo-firstname:first-letter {color: var(--ruby);}
   .logo-lastname {color: var(--ruby);}
   .bq-quote {padding: 50px;}
+
+  .media-front .content {display: flex;}
+  .media-front .media, .media-back .media {flex: 1 0 250px; margin: 4.5rem 1.5rem 0 0;}
+  .media-front .section-content, .media-back .section-content {flex: 1 1 350px; max-width: 600px;}
+  .media-back .content {flex-direction: row-reverse;}
+
+  .media-back .media {margin-right: 0; margin-left: 1.5rem;}
 }
 
 @media only screen and (min-width: 1024px) {
   .h1 {font-size: 4rem; line-height: 1;}
   .h2 {font-size: 3rem; line-height: 1.1;}
 
-  .codehilite code {
-    padding: 28px;
-  }
+  .codehilite code {padding: 28px;}
+  code, .code, .codehilite {font-size: 0.9rem; line-height: 1.3;}
 
-  code, .code, .codehilite {
-    font-size: 0.9rem;
-    line-height: 1.3;
-  }
+  .centered {padding: 100px 0; text-align: center;}
 
-  .centered {
-    padding: 100px 0;
-    text-align: center;
-  }
+  .media-front .content, .media-back .content {align-items: center;}
+  .media-front .media {margin: 0 3rem 0 -122px;}
+  .media-back .media {margin: 0 -122px 0 3rem;}
 }
