--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -2,6 +2,7 @@
   --jet: #363636;
   --smoky: #0A0908;
   --athens: #e6e9f0;
+  --athens-tr: rgba(230, 233, 240, 0.7);
   --mystic: #eef1f5;
 
   --ruby: #e8175d;
@@ -9,7 +10,7 @@
   --denim: #1384e2;
   --fulvors: #e28413;
   --lightbw: #f9f9fc;
-  --manatee: #999ca0;
+  --Manatee: #999ca0;
 
   --fg-color: var(--smoky);
   --dark-fg-color: var(--lightbw);
@@ -188,6 +189,7 @@ p code {
 .img {
   display: inline-block;
   max-width: 100%;
+  line-height: 1;
 }
 
 /* Tables */
@@ -414,7 +416,7 @@ code, .code, .codehilite {
   color: var(--section-fg);
 }
 
-.content {
+.section .content {
   max-width: 940px;
   margin: 0 auto;
   padding: 20px;
@@ -463,6 +465,11 @@ body .text-content :last-child {
   padding: 1.5rem 0;
 }
 
+/* Image media */
+.media .img {
+  display: block;
+}
+
 /* Media left/above */
 .media-front .media {
   margin-bottom: 2.4rem;
@@ -476,6 +483,25 @@ body .text-content :last-child {
 
 .media-back .media {
   margin-top: 2.4rem;
+}
+
+/* Wide media */
+.media-wide .content {
+  position: relative;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+.media-wide .media {
+  margin-bottom: 1rem;
+}
+
+.s-mega-wide .content {
+  max-width: 1400px;
+}
+
+.s-wide .content {
+  max-width: 1200px;
 }
 
 @media only screen and (orientation : landscape) {
@@ -495,7 +521,7 @@ body .text-content :last-child {
   .h3 {font-size: 2rem;}
   .h4 {font-size: 1.5rem;}
   code, .code, .codehilite {font-size: 0.7rem;}
-  .content {padding: 50px 40px;}
+  .section .content {padding: 50px 40px;}
   div.hide-mobile {display: block;}
   span.hide-mobile {display: inline;}
 
@@ -520,6 +546,25 @@ body .text-content :last-child {
   .media-back .content {flex-direction: row-reverse;}
 
   .media-back .media {margin-right: 0; margin-left: 1.5rem;}
+
+  .media-wide .content {padding: 0;}
+  .media-wide .media {margin-bottom: 0;}
+
+  .media-wide .title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+  }
+
+  .media-wide .h1 {
+    background: var(--athens-tr);
+    padding: 1rem 3rem;
+    margin: 0 auto;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
