--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -10,7 +10,7 @@
   --denim: #1384e2;
   --fulvors: #e28413;
   --lightbw: #f9f9fc;
-  --Manatee: #999ca0;
+  --manatee: #999ca0;
 
   --fg-color: var(--smoky);
   --dark-fg-color: var(--lightbw);
