--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -174,6 +174,10 @@ a:hover, .clickable:hover {
   font-size: 1.4rem;
 }
 
+.h5 {
+  font-size: 1.2rem;
+}
+
 p code {
   background: var(--code-bg);
   padding: 2px 3px;
@@ -188,6 +192,10 @@ p code {
 
 .text-s {
   font-size: 0.9rem;
+}
+
+.text-xs {
+  font-size: 0.8rem;
 }
 
 .img {
@@ -443,6 +451,10 @@ code, .code, .codehilite {
   margin-bottom: 1rem;
 }
 
+.teaser .h5 {
+  display: none;
+}
+
 /* Sections */
 
 .section {
@@ -562,6 +574,7 @@ body .text-content :last-child {
   .h2 {font-size: 2.5rem;}
   .h3 {font-size: 2rem;}
   .h4 {font-size: 1.5rem;}
+  .h5 {font-size: 1.25rem; }
   code, .code, .codehilite {font-size: 0.7rem;}
   .section .content {padding: 50px 40px;}
   div.hide-mobile {display: block;}
@@ -615,6 +628,7 @@ body .text-content :last-child {
 
   .teaser .content {
     margin: 0 0 0 1rem;
+    flex-direction: column;
   }
 
   .teaser .media {
@@ -636,4 +650,5 @@ body .text-content :last-child {
   .media-front .media {margin: 0 3rem 0 -122px;}
   .media-back .media {margin: 0 -122px 0 3rem;}
   .teaser .content {margin: 0 0 0 2rem;}
+  .teaser .h5 {display: block;}
 }
