--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -150,31 +150,40 @@ a:hover, .clickable:hover {
   padding: 20px 0;
 }
 
-.h1, .h2, .h3, .h4 {
+.h1, .h2, .h3, .h4,
+.text-content h1,
+.text-content h2,
+.text-content h3,
+.text-content h4 {
   font-family: "Source Sans Pro", Helvetica, sans-serif;
   font-weight: 500;
 }
 
-.h1 {
+.h1,
+.text-content h1 {
   font-size: 2.6rem;
   line-height: 1.2;
 }
 
-.h2 {
+.h2,
+.text-content h2 {
   font-size: 2rem;
   line-height: 1.2;
 }
 
-.h3 {
+.h3,
+.text-content h3 {
   font-size: 1.7rem;
   line-height: 1.2;
 }
 
-.h4 {
+.h4,
+.text-content h4 {
   font-size: 1.4rem;
 }
 
-.h5 {
+.h5,
+.text-content h5 {
   font-size: 1.2rem;
 }
 
@@ -241,10 +250,14 @@ p code {
 .header {
   background: var(--header-bg);
   color: var(--header-fg);
+}
+
+.header-content {
   align-items: center;
   justify-content: space-between;
   padding: 0 10px 10px;
-  margin-top: 30px;
+  margin: 30px auto 0;
+  max-width: 1100px;
 }
 
 .logo {
@@ -576,7 +589,7 @@ body .text-content :last-child {
 @media only screen and (min-width: 768px) {
   html, body {
     font-size: 21px;
-    line-height: 1.4;
+    line-height: 1.5;
   }
 
   .h1 {font-size: 3.5rem;}
@@ -585,13 +598,13 @@ body .text-content :last-child {
   .h4 {font-size: 1.5rem;}
   .h5 {font-size: 1.25rem; }
   code, .code, .codehilite {font-size: 0.7rem;}
-  .section .content {padding: 50px 40px;}
+  .section .content {padding: 2rem 40px;}
   div.hide-mobile {display: block;}
   span.hide-mobile {display: inline;}
 
-  .header {
+  .header-content {
     display: flex;
-    margin: 0;
+    margin-top: 0;
     padding: 10px 20px;
   }
 
@@ -602,6 +615,7 @@ body .text-content :last-child {
   .header .menu {margin: 0; font-size: 1rem;}
   .logo-firstname:first-letter {color: var(--ruby);}
   .logo-lastname {color: var(--ruby);}
+  .header a, .header a:link {color: var(--ruby);}
   .bq-quote {padding: 50px;}
 
   .media-front .content {display: flex;}
@@ -657,7 +671,7 @@ body .text-content :last-child {
   .codehilite code {padding: 28px;}
   code, .code, .codehilite {font-size: 0.9rem; line-height: 1.3;}
 
-  .centered {padding: 100px 0; text-align: center;}
+  .centered {padding: 3rem 0; text-align: center;}
 
   .media-front .content, .media-back .content {align-items: center;}
   .media-front .media {margin: 0 3rem 0 -122px;}
