--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -18,7 +18,7 @@
   --section-fg: var(--smoky);
   --link-color: var(--denim);
   --code-bg: var(--lightbw);
-  --code-contrast: var(--jet);
+  --code-contrast: var(--lima);
   --header-bg: var(--mystic);
   --header-fg: var(--fg-color);
 }
@@ -343,7 +343,7 @@ code, .code, .codehilite {
 .codehilite .ge { font-style: italic } /* Generic.Emph */
 .codehilite .gr { color: var(--code-contrast); font-weight: bold; } /* Generic.Error */
 .codehilite .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.codehilite .gi { color: #00aa00 } /* Generic.Inserted */
+.codehilite .gi { color: var(--jet) } /* Generic.Inserted */
 .codehilite .go { color: #888888 } /* Generic.Output */
 .codehilite .gp { color: #555555 } /* Generic.Prompt */
 .codehilite .gs { font-weight: bold } /* Generic.Strong */
@@ -359,14 +359,14 @@ code, .code, .codehilite {
 .codehilite .s { color: var(--ruby) } /* Literal.String */
 .codehilite .na { color: var(--code-contrast)  font-weight: bold;} /* Name.Attribute */
 .codehilite .nb { color: var(--lima); font-weight: bold; } /* Name.Builtin */
-.codehilite .nc { color: #00aa00; text-decoration: underline } /* Name.Class */
+.codehilite .nc { color: var(--jet); text-decoration: underline } /* Name.Class */
 .codehilite .no { color: var(--code-contrast); font-weight: bold; } /* Name.Constant */
 .codehilite .nd { color: #888888 } /* Name.Decorator */
 .codehilite .ni { color: #800000; font-weight: bold } /* Name.Entity */
-.codehilite .nf { color: #00aa00 } /* Name.Function */
+.codehilite .nf { color: var(--jet) } /* Name.Function */
 .codehilite .nn { color: var(--lima); font-weight: bold;; text-decoration: underline } /* Name.Namespace */
 .codehilite .nt { color: var(--smokey); font-weight: bold } /* Name.Tag */
-.codehilite .nv { color: var(--code-contrast); font-weight: bold; } /* Name.Variable */
+.codehilite .nv { color: var(--code-contrast); } /* Name.Variable */
 .codehilite .ow { color: var(--denim); } /* Operator.Word */
 .codehilite .w { color: #bbbbbb } /* Text.Whitespace */
 .codehilite .mf { color: var(--lima); font-weight: bold; } /* Literal.Number.Float */
@@ -618,6 +618,7 @@ body .text-content :last-child {
   .h5 {font-size: 1.25rem; }
   .codehilite {font-size: 0.7rem;}
   .section .content {padding: 2rem 40px;}
+  .section:last-child .content {padding-bottom: 100px;}
   div.hide-mobile {display: block;}
   span.hide-mobile {display: inline;}
 
