--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -1,28 +1,5 @@
-:root {
-  --jet: #363636;
-  --smoky: #0A0908;
-  --athens: #e6e9f0;
-  --athens-tr: rgba(230, 233, 240, 0.7);
-  --mystic: #eef1f5;
-
-  --ruby: #e8175d;
-  --lima: #72B01D;
-  --denim: #1384e2;
-  --fulvors: #e28413;
-  --lightbw: #f9f9fc;
-  --manatee: #999ca0;
-
-  --fg-color: var(--smoky);
-  --dark-fg-color: var(--lightbw);
-  --section-bg: #fff;
-  --section-fg: var(--smoky);
-  --link-color: var(--denim);
-  --code-bg: var(--lightbw);
-  --code-contrast: var(--lima);
-  --header-bg: var(--mystic);
-  --header-fg: var(--fg-color);
-  --code-high-contrast: var(--jet);
-}
+@import url("vars.css");
+@import url("syntax-highlight.css");
 
 .theme-light1 {
   --section-bg: linear-gradient(120deg, var(--athens) 0%, var(--mystic) 100%);
@@ -325,6 +302,41 @@ dd code {
 .menu {display: flex;}
 .menu li + li {margin-left: 10px;}
 
+/* Footer */
+.footer {
+  border-top: 1px solid var(--athens);
+  padding-top: 1rem;
+}
+
+.license {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.license a {
+  background: var(--jet);
+  display: flex;
+  margin: 0 1rem 0 0;
+}
+
+.cc-logo {
+  display: block;
+  height: 31px;
+  width: 31px;
+  margin: 5px;
+}
+
+.cc-logo img {
+  display: block;
+  max-width: 100%;
+}
+
+.twitter a {
+  display: flex;
+  align-items: center;
+}
+
 /* Byline */
 .byline .date {
   margin-right: 10px;
@@ -336,81 +348,6 @@ dd code {
   font-size: 0.9rem;
   padding: 10px 0 20px;
 }
-
-/* Syntax highlighting */
-
-.codehilite code {
-  background: var(--code-bg);
-  display: block;
-  padding: 12px 6px;
-  overflow: scroll;
-}
-
-code, .code, .codehilite {
-  font-family: "Source Code Pro", monospace;
-}
-
-.codehilite {font-size: 0.7rem;}
-
-.codehilite .hll { background-color: #ffffcc }
-.codehilite .c { color: #aaaaaa; font-style: italic } /* Comment */
-.codehilite .err { color: #F00000; background-color: #F0A0A0 } /* Error */
-.codehilite .k { color: var(--denim); font-weight: bold; } /* Keyword */
-.codehilite .cm { color: #aaaaaa; font-style: italic } /* Comment.Multiline */
-.codehilite .cp { color: var(--smokey); } /* Comment.Preproc */
-.codehilite .c1 { color: #aaaaaa; font-style: italic } /* Comment.Single */
-.codehilite .cs { color: var(--denim); font-style: italic } /* Comment.Special */
-.codehilite .gd { color: var(--code-contrast); font-weight: bold; } /* Generic.Deleted */
-.codehilite .ge { font-style: italic } /* Generic.Emph */
-.codehilite .gr { color: var(--code-contrast); font-weight: bold; } /* Generic.Error */
-.codehilite .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.codehilite .gi { color: var(--code-high-contrast) } /* Generic.Inserted */
-.codehilite .go { color: #888888 } /* Generic.Output */
-.codehilite .gp { color: #555555 } /* Generic.Prompt */
-.codehilite .gs { font-weight: bold } /* Generic.Strong */
-.codehilite .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.codehilite .gt { color: var(--code-contrast); font-weight: bold; } /* Generic.Traceback */
-.codehilite .kc { color: var(--denim); } /* Keyword.Constant */
-.codehilite .kd { color: var(--denim); font-weight: bold } /* Keyword.Declaration */
-.codehilite .kn { color: var(--denim); } /* Keyword.Namespace */
-.codehilite .kp { color: var(--denim); } /* Keyword.Pseudo */
-.codehilite .kr { color: var(--denim); } /* Keyword.Reserved */
-.codehilite .kt { color: var(--lima); font-weight: bold; } /* Keyword.Type */
-.codehilite .m { color: var(--lima); font-weight: bold; } /* Literal.Number */
-.codehilite .s { color: var(--ruby) } /* Literal.String */
-.codehilite .na { color: var(--code-contrast)  font-weight: bold;} /* Name.Attribute */
-.codehilite .nb { color: var(--lima); font-weight: bold; } /* Name.Builtin */
-.codehilite .nc { color: var(--code-high-contrast); text-decoration: underline } /* Name.Class */
-.codehilite .no { color: var(--code-contrast); font-weight: bold; } /* Name.Constant */
-.codehilite .nd { color: #888888 } /* Name.Decorator */
-.codehilite .ni { color: #800000; font-weight: bold } /* Name.Entity */
-.codehilite .nf { color: var(--code-high-contrast) } /* Name.Function */
-.codehilite .nn { color: var(--lima); font-weight: bold;; text-decoration: underline } /* Name.Namespace */
-.codehilite .nt { color: var(--smokey); font-weight: bold } /* Name.Tag */
-.codehilite .nv { color: var(--code-contrast); } /* Name.Variable */
-.codehilite .ow { color: var(--denim); } /* Operator.Word */
-.codehilite .w { color: #bbbbbb } /* Text.Whitespace */
-.codehilite .mf { color: var(--lima); font-weight: bold; } /* Literal.Number.Float */
-.codehilite .mh { color: var(--lima); font-weight: bold; } /* Literal.Number.Hex */
-.codehilite .mi { color: var(--lima); font-weight: bold; } /* Literal.Number.Integer */
-.codehilite .mo { color: var(--lima); font-weight: bold; } /* Literal.Number.Oct */
-.codehilite .sb { color: var(--ruby) } /* Literal.String.Backtick */
-.codehilite .sc { color: var(--ruby) } /* Literal.String.Char */
-.codehilite .sd { color: var(--ruby) } /* Literal.String.Doc */
-.codehilite .s2 { color: var(--ruby) } /* Literal.String.Double */
-.codehilite .se { color: var(--ruby) } /* Literal.String.Escape */
-.codehilite .sh { color: var(--ruby) } /* Literal.String.Heredoc */
-.codehilite .si { color: var(--ruby) } /* Literal.String.Interpol */
-.codehilite .sx { color: var(--ruby) } /* Literal.String.Other */
-.codehilite .sr { color: var(--lima); font-weight: bold; } /* Literal.String.Regex */
-.codehilite .s1 { color: var(--ruby) } /* Literal.String.Single */
-.codehilite .ss { color: var(--fulvors); } /* Literal.String.Symbol */
-.codehilite .bp { color: var(--lima); font-weight: bold; } /* Name.Builtin.Pseudo */
-.codehilite .vc { color: var(--code-contrast); font-weight: bold; } /* Name.Variable.Class */
-.codehilite .vg { color: var(--code-contrast); font-weight: bold; } /* Name.Variable.Global */
-.codehilite .vi { color: var(--code-contrast); font-weight: bold; } /* Name.Variable.Instance */
-.codehilite .il { color: var(--lima); font-weight: bold; } /* Literal.Number.Integer.Long */
-.codehilite .nx {font-weight: bold;}
 
 /* Captioned elements */
 
@@ -724,4 +661,5 @@ body .text-content :last-child {
   .media-back .media {margin: 0 -122px 0 3rem;}
   .media + .teaser-content {margin: 0 0 0 2rem;}
   .teaser .h5 {display: block;}
+  .footer-content {max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between;}
 }
