--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -305,7 +305,7 @@ dd code {
 /* Footer */
 .footer {
   border-top: 1px solid var(--athens);
-  padding-top: 1rem;
+  padding: 1rem;
 }
 
 .license {
@@ -447,11 +447,11 @@ dd code {
   padding: 20px;
 }
 
-.text-content h1 a:link,
-.text-content h2 a:link,
-.text-content h3 a:link,
-.text-content h4 a:link,
-.text-content h5 a:link {
+h1 a:link,
+h2 a:link,
+h3 a:link,
+h4 a:link,
+h5 a:link {
   color: var(--fg-color);
 }
 
@@ -574,11 +574,11 @@ body .text-content :last-child {
     line-height: 1.5;
   }
 
-  .h1 {font-size: 3.5rem;}
-  .h2 {font-size: 2.5rem;}
-  .h3 {font-size: 2rem;}
-  .h4 {font-size: 1.5rem;}
-  .h5 {font-size: 1.25rem; }
+  .h1, .text-content h1 {font-size: 3.5rem;}
+  .h2, .text-content h2 {font-size: 2.5rem;}
+  .h3, .text-content h3 {font-size: 2rem;}
+  .h4, .text-content h4 {font-size: 1.5rem;}
+  .h5, .text-content h5 {font-size: 1.25rem; }
   .codehilite {font-size: 0.7rem;}
   .section .content {padding: 4rem 40px;}
   .section:last-child .content {padding-bottom: 100px;}
@@ -648,8 +648,8 @@ body .text-content :last-child {
 }
 
 @media only screen and (min-width: 1024px) {
-  .h1 {font-size: 4rem; line-height: 1;}
-  .h2 {font-size: 3rem; line-height: 1.1;}
+  .h1, .text-content h1 {font-size: 4rem; line-height: 1;}
+  .h2, .text-content h2 {font-size: 3rem; line-height: 1.1;}
 
   .codehilite code {padding: 28px;}
   .codehilite {font-size: 0.9rem; line-height: 1.3;}
