--- a/ui/resources/public/css/cjohansen.css
+++ b/ui/resources/public/css/cjohansen.css
@@ -661,5 +661,5 @@ body .text-content :last-child {
   .media-back .media {margin: 0 -122px 0 3rem;}
   .media + .teaser-content {margin: 0 0 0 2rem;}
   .teaser .h5 {display: block;}
-  .footer-content {max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between;}
+  .footer-content {max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; padding: 0 20px;}
 }
